--- a/src/css/components/main-grid.sass
+++ b/src/css/components/main-grid.sass
@@ -9,9 +9,11 @@ $aspect-ratio: 1.25
   display: grid
   grid-template-columns: repeat(auto-fill, $height)
   justify-content: center
-  gap: 16px
+  &:not(.is-prefer-names)
+    gap: 16px
   &.is-prefer-names
     gap: 8px 16px
+  padding: $sidebar-padding-x * 2 32px
 
 .main-grid-item
   position: relative
